@@ -123,7 +123,7 @@ Entering a file name to save to makes it possible to write your export directly 
 			<label index="import.alttitle">Importing TYPO3 records</label>
 			<label index="import.description">To import TYPO3 T3D/XML files into the page tree you click any page in the page tree (including the root page!), select &quot;More options&quot; (requires the extensions &quot;extra_page_cm_options&quot; to be installed) and then &quot;Import from .t3d&quot;. This will bring up the import interface where you can select a file to import or upload a new one.</label>
 			<label index="import.details">&lt;b&gt;Tip: Import into a Sys Folder&lt;/b&gt;
-To make sure that no records are lost during the import, you can make yourself safe by importing into a folder you create first. After the import you can move all records to the final destinations. An example of such a scenario is if you configured the export to include relations; In that case a number of records may follow the export outside the page tree structure you are exporting. To make sure that all of these external records are written to the database, importing into a folder is a good idea.
+To make sure that no records are lost during the import, you can make yourself safe by importing into a SysFolder you create first. After the import you can move all records to the final destinations. An example of such a scenario is if you configured the export to include relations; In that case a number of records may follow the export outside the page tree structure you are exporting. To make sure that all of these external records are written to the database, importing into a SysFolder is a good idea.
 
 &lt;b&gt;Error messages:&lt;/b&gt; Remember to consult the Message-tab before/after importing to see if there are any error messages there!</label>
 			<label index="_import.seeAlso">xMOD_tx_impexp:export</label>
